tests/fixtures/invalid/parse_errors/missing_value.luma
-- Missing assignment value
let x =
